# mcp-dev

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/agents/: docs-pre-commit.md
project-scaffold/: CLAUDE.md  README.md  pyproject.toml
project-scaffold/src/project_scaffold/: __main__.py  config.py  server.py
project-scaffold/templates/alembic/: alembic.ini.j2
project-scaffold/templates/api/: Dockerfile.j2  pyproject.toml.j2  startup.sh.j2
project-scaffold/templates/api/app/: config.py.j2  main.py.j2
project-scaffold/templates/api/app/auth/: jwt.py.j2  routes.py.j2
project-scaffold/templates/api/app/routers/: health.py.j2  pages.py.j2  users.py.j2
project-scaffold/templates/cicd/azure/: ci-api.yml.j2  ci-frontend.yml.j2  deploy-frontend.yml.j2
project-scaffold/templates/cicd/render/: render.yaml.j2
project-scaffold/templates/common/: Makefile.j2  gitignore_frontend.j2
project-scaffold/templates/docker/: docker-compose.override.yml.j2  docker-compose.yml.j2
project-scaffold/templates/frontend/htmx/templates/: base.html.j2  index.html.j2
project-scaffold/templates/frontend/htmx/templates/partials/: user_form.html.j2  user_list.html.j2
project-scaffold/templates/frontend/react/: nginx.conf.j2
project-scaffold/templates/frontend/react/src/: App.tsx.j2
project-scaffold/templates/frontend/react/src/components/: Layout.tsx.j2
project-scaffold/templates/frontend/react/src/pages/: Home.tsx.j2
project-scaffold/templates/frontend/react/src/styles/: globals.css.j2
(+37 files in other folders)
