[project]
name = "project-scaffold"
version = "0.3.3"
description = "MCP server for scaffolding new projects with consistent structure"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[project.scripts]
project-scaffold = "project_scaffold.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/project_scaffold"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
