[project]
name = "project-scaffold"
version = "0.1.0"
description = "MCP server for scaffolding new projects with consistent structure"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/project_scaffold"]
